source/blender/editors/space_outliner/outliner_draw.c
@@ -2915,9 +2915,9 @@ static void outliner_set_coord_tree_element(TreeElement *te, int startx, int sta
 
   /* closed items may be displayed in row of parent, don't change their coordinate! */
   if ((te->flag & TE_ICONROW) == 0 && (te->flag & TE_ICONROW_MERGED) == 0) {
-    /* store coord and continue, we need coordinates for elements outside view too */
-    te->xs = startx;
-    te->ys = starty;
+    te->xs = 0;
+    te->ys = 0;
+    te->xend = 0;
   }
 
   for (ten = te->subtree.first; ten; ten = ten->next) {
